# meal_planner

./: .env.dist  .gitignore  PROJECT_SPEC.md  README.md  pyproject.toml  pytest.ini  requirements.txt
meal_planner/: settings.py  urls.py
meal_plans/: admin.py  forms.py  models.py  urls.py  views.py
meal_plans/migrations/: 0001_initial.py  0002_plan_owner.py
meal_plans/templates/meal_plans/: base.html  delete_plan.html  edit_plan.html  index.html  new_plan.html  plan.html  plans.html
templates/: 404.html  500.html
tests/: test_meal_plans_forms.py  test_meal_plans_models.py  test_meal_plans_templates.py  test_meal_plans_views.py  test_users_forms.py  test_users_templates.py  test_users_views.py
users/: forms.py  models.py  urls.py  views.py
users/templates/registration/: logged_out.html  login.html  register.html
users/templates/users/: delete_user.html
